--- a/package.json
+++ b/package.json
@@ -6,17 +6,25 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint --ext .ts,.tsx"
   },
   "dependencies": {
+    "install": "0.13.0",
     "next": "11.1.2",
     "react": "17.0.2",
     "react-dom": "17.0.2"
   },
   "devDependencies": {
+    "@babel/core": "^7.15.5",
     "@types/react": "17.0.33",
     "eslint": "8.1.0",
+    "eslint-config-airbnb": "18.2.1",
     "eslint-config-next": "11.1.2",
+    "eslint-config-prettier": "8.3.0",
+    "eslint-plugin-import": "2.25.2",
+    "eslint-plugin-jsx-a11y": "6.4.1",
+    "eslint-plugin-prettier": "4.0.0",
+    "eslint-plugin-react-hooks": "4.2.0",
     "typescript": "4.4.4"
   }
 }
