feat: Use styled-component

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -20,7 +20,7 @@
   "extends": [
     "airbnb",
     "airbnb/hooks",
-    "plugin:@typescript-eslint/recommended",
+    "plugin:@typescript-eslint/eslint-recommended",
     "plugin:react/recommended",
     "plugin:import/errors",
     "plugin:import/warnings",
@@ -29,7 +29,9 @@
   ],
   "rules": {
     "no-shadow": "off",
-    "@typescript-eslint/no-shadow": ["error"],
+    "@typescript-eslint/no-shadow": [
+      "error"
+    ],
     "react/react-in-jsx-scope": "off",
     "react/jsx-filename-extension": [
       1,
@@ -71,26 +73,6 @@
   },
   "settings": {
     "import/resolver": {
-      "babel-module": {
-        "extensions": [
-          ".js",
-          ".jsx",
-          ".ts",
-          ".tsx"
-        ]
-      },
-      "node": {
-        "extensions": [
-          ".js",
-          ".jsx",
-          ".ts",
-          ".tsx"
-        ],
-        "paths": [
-          "src"
-        ],
-        "moduleDirectory": ["node_modules", "src/", "dummy/"]
-      },
       "typescript": {}
     }
   }
