--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
+    "netlify-deploy": "next build && next export",
     "lint": "next lint --ext .ts,.tsx"
   },
   "dependencies": {
