--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "next build",
     "start": "next start",
     "netlify-deploy": "next build && next export",
+    "postbuild": "next-on-netlify",
     "lint": "next lint --ext .ts,.tsx"
   },
   "dependencies": {
@@ -14,6 +15,7 @@
     "mobx": "6.3.5",
     "mobx-react": "7.2.1",
     "next": "11.1.2",
+    "next-on-netlify": "3.0.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "styled-components": "5.3.3"
