--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -29,6 +29,7 @@
   ],
   "rules": {
     "no-shadow": "off",
+    "no-underscore-dangle": "off",
     "@typescript-eslint/no-shadow": [
       "error"
     ],
