--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@netlify/plugin-nextjs": "3.9.2",
+    "axios": "0.24.0",
     "mobx": "6.3.5",
     "mobx-react": "7.2.1",
     "next": "11.1.2",
